--- a/src/app/pages/settings/views/user-form/user-form.component.html
+++ b/src/app/pages/settings/views/user-form/user-form.component.html
@@ -1,13 +1,13 @@
 <section class="">
   <div class=" px-4 py-8 mx-auto lg:py-16 ">
     <h2 class="mb-4 text-xl font-bold text-gray-900 "> تحديث المعلومات</h2>
-    <form [formGroup]="userForm" (ngSubmit)="onUserFormSubmit">
+    <form [formGroup]="userForm" (ngSubmit)="onUserFormSubmit()">
       <div class="grid gap-4 mb-4 sm:grid-cols-3 sm:gap-6 sm:mb-5">
         <div class="w-full ">
           <label for="perm" class="block mb-2 text-sm font-medium text-gray-900 :text-white">الصلاحيات
           </label>
           <label type="text" name="perm" id="perm"
-            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 ">{{userForm.get('role').value?userForm.get('role').value:''}}</label>
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 ">{{user.role.name}}</label>
         </div>
         <div class="w-full ">
         <app-input [control]="userForm.get('lastname')" type="text" label="* الاسم الاخير" maxlength="20" autofocus="true"
@@ -52,11 +52,11 @@
         </div>
       </div>
       <div class="flex items-center space-x-4" [ngSwitch]="isSubmitted">
-        <button *ngSwitchCase="true" type="submit"
+        <button *ngSwitchCase="false" type="submit"
           class="text-gray-400 bg-primary-700 border border-gray-400 hover:text-gray-800 hover:border-gray-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-3xl text-sm px-5 py-2.5 text-center ">
           حفظ
         </button>
-        <button *ngSwitchCase="false"
+        <button *ngSwitchCase="true" (click)="toggleUserForm()"
           class="text-gray-400 bg-primary-700 border border-gray-400 hover:text-gray-800 hover:border-gray-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-3xl text-sm px-5 py-2.5 text-center ">
           تحديث المعلومات
         </button>
