--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -394,16 +394,16 @@
           </select>
         </div>
         <div class="flex flex-col">
-          <label class="text-sm font-semibold text-gray-900 mb-2">الاسم</label>
-          <input formControlName="name" class="border border-gray-300 rounded-3xl p-2 text-right" />
+          <app-input [control]="editProductForm.get('name')" type="text" label="* اسم المنتج " maxlength="20"
+            autofocus="true" required="true"></app-input>
         </div>
         <div class="flex flex-col">
           <app-input [control]="editProductForm.get('price')" type="number" label="* السعر" maxlength="20" autofocus="true"
             required="true"></app-input>
         </div>
         <div class="flex flex-col">
-          <label class="text-sm font-semibold text-gray-900 mb-2">العدد بالمخزن</label>
-          <input formControlName="stock" class="border border-gray-300 rounded-3xl p-2 text-right" />
+            <app-input [control]="editProductForm.get('stock')" type="number" label="* العدد بالمخزن" maxlength="20" autofocus="true"
+              required="true"></app-input>
         </div>
         <div class="flex flex-col col-span-2">
           <label class="text-sm font-semibold text-gray-900 mb-2"> الوصف</label>
