--- a/src/app/pages/dashboard/components/products/products.component.html
+++ b/src/app/pages/dashboard/components/products/products.component.html
@@ -352,7 +352,7 @@
           </button>
           <button type="submit"
             class="inline-block bg-black shrink-0 rounded-3xl mx-1 px-6 py-1 text-sm font-semibold text-white hover:text-gray-50 focus:outline-none active:text-white disabled:cursor-not-allowed disabled:bg-gray-200 disabled:text-gray-400"
-            [disabled]="addProductForm.invalid">
+            [disabled]="isAddProductFormSubmitted ||addProductForm.invalid  ">
             تأكيد
           </button>
         </div>
