--- a/src/app/pages/checkout/views/payement-card/payement-card.component.html
+++ b/src/app/pages/checkout/views/payement-card/payement-card.component.html
@@ -123,7 +123,7 @@
       </div>
     </div>
     <div class="col-span-12 md:col-span-7  border-2 border-dashed rounded-3xl p-2.5 m-2">
-      <p class="text-gray-700 text-right">ادخل بيانات بطاقة الدفع</p>
+      <p class="text-gray-700 font-semibold text-right">ادخل بيانات بطاقة الدفع</p>
     
       <form class="text-right grid gap-4 mb-4 sm:grid-cols-2">
         <div class="text-left">
