--- a/src/app/pages/checkout/views/stepper/stepper.component.html
+++ b/src/app/pages/checkout/views/stepper/stepper.component.html
@@ -52,7 +52,7 @@
         <div class=" flex justify-start">
           <button
             class="bg-black inline-block px-5 py-2 my-1 text-white font-semibold border-solid     border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-white hover:text-black disabled:cursor-not-allowed  disabled:from-gray-400 disabled:to-gray-400"
-            (click)="true">
+            (click)="createOrder()">
             تأكيد الطلب
             <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true">
