--- a/src/app/pages/checkout/views/address-cart/address-cart.component.html
+++ b/src/app/pages/checkout/views/address-cart/address-cart.component.html
@@ -44,7 +44,7 @@
   <div class="flex items-center gap-x-3">
     <button type="submit"
       class="mx-0.5 bg-gradient-to-bl from-blue-400 to-blue-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br disabled:cursor-not-allowed disabled:from-gray-400 disabled:to-gray-400 "
-      [disabled]="addressForm.invalid"
+      [disabled]="addressForm.invalid || isSubmitted"
       >
       حفظ البيانات
     </button>
