--- a/src/app/pages/checkout/views/stepper/stepper.component.html
+++ b/src/app/pages/checkout/views/stepper/stepper.component.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div *ngSwitchCase="3">
-        <app-cart-items></app-cart-items>
+      <app-checkout-cart></app-checkout-cart>
         <div class=" flex justify-start">
           <button
             class="bg-black inline-block px-5 py-2 my-1 text-white font-semibold border-solid     border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-white hover:text-black disabled:cursor-not-allowed  disabled:from-gray-400 disabled:to-gray-400"
