--- a/src/app/pages/settings/components/home/home.component.html
+++ b/src/app/pages/settings/components/home/home.component.html
@@ -4,16 +4,20 @@
     <main class="p-4  h-auto pt-20">
 
       <div class="grid grid-cols-3 gap-4 mb-4">
-          <!-- animated blured divs -->
-          <div
-            class="absolute top-[50%]  right-[5%] w-72 h-72 rounded-full bg-gray-400 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
-          </div>
-          <div
-            class="absolute top-[25%] right-[2%] w-72 h-72 rounded-full bg-red-400 mix-blend-multiply filter blur-3xl animation-delay-4000">
-          </div>
-          <div
-            class="absolute bottom-[0%] right-[14%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
-          </div>
+            <!-- animated blured divs -->
+            <div
+              class="absolute top-[1%]  right-[15%] w-24 h-40 rounded-full bg-[#252A34] mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+            </div>
+            <div
+              class="absolute top-[15%] right-[11%]  w-40 h-40 rounded-full bg-[#08D9D6] mix-blend-multiply filter blur-3xl animation-delay-4000">
+            </div>
+            <div
+              class="absolute top-[25%] right-[17%] w-64 h-64 rounded-full bg-[#FF2E63] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+            </div>
+            <div
+              class="absolute top-[35%] right-[14%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+            </div>
+            <!-- animated blured divs -->
           <app-user-card class="col-span-full md:col-span-1"></app-user-card>
         <div class="col-span-3 border-2 border-dashed rounded-3xl border-gray-300  sm:col-span-2">
          <app-user-form></app-user-form>
