--- a/src/app/pages/auth/components/signin/signin.component.html
+++ b/src/app/pages/auth/components/signin/signin.component.html
@@ -1,13 +1,18 @@
 <section class="container mx-auto my-20 relative">
-  <div
-    class="absolute top-[5%] right-[16%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
-  </div>
-  <div
-    class="absolute top-[25%] right-[13%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
-  </div>
-  <div
-    class="absolute top-[50%] right-[12%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
-  </div>
+    <!-- animated blured divs -->
+    <div
+      class="absolute top-[1%]  right-[15%] w-24 h-40 rounded-full bg-[#252A34] mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+    </div>
+    <div
+      class="absolute top-[15%] right-[11%]  w-40 h-40 rounded-full bg-[#08D9D6] mix-blend-multiply filter blur-3xl animation-delay-4000">
+    </div>
+    <div
+      class="absolute top-[25%] right-[17%] w-60 h-60 rounded-full bg-[#FF2E63] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    </div>
+    <div
+      class="absolute top-[35%] right-[14%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+    </div>
+    <!-- animated blured divs -->
   <div class="lg:grid lg:grid-cols-12 rounded-3xl ">
     <section class="header-img relative flex h-40 items-end lg:col-span-5 lg:h-full xl:col-span-6">
       <img alt="Night" src="../../../../../assets/images/side.jpg"
