--- a/src/app/pages/checkout/components/index/index.component.html
+++ b/src/app/pages/checkout/components/index/index.component.html
@@ -4,13 +4,16 @@
     <main class="p-4  h-auto pt-20 relative">
       <!-- animated blured divs -->
       <div
-        class="absolute top-[50%]  right-[5%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+        class="absolute top-[1%]  left-[5%] w-40 h-40 rounded-full bg-[#252A34] mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
       </div>
       <div
-        class="absolute top-[25%] right-[4%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
+        class="absolute top-[15%] left-[1%]  w-40 h-40 rounded-full bg-[#08D9D6] mix-blend-multiply filter blur-3xl animation-delay-4000">
       </div>
       <div
-        class="absolute bottom-[4%] right-[4%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+        class="absolute top-[25%] left-[7%] w-40 h-40 rounded-full bg-[#FF2E63] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+      </div>
+      <div
+        class="absolute top-[35%] left-[4%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
       </div>
       <!-- animated blured divs -->
       <div class="grid grid-cols-3 gap-4 mb-4">
