--- a/src/app/pages/checkout/views/checkout-cart/checkout-cart.component.html
+++ b/src/app/pages/checkout/views/checkout-cart/checkout-cart.component.html
@@ -1,25 +1,7 @@
-<div class=" max-h-96 min-h-full  overflow-scroll">
+<div class="p-2 max-h-96 min-h-full  overflow-scroll">
   <div class="relative overflow-x-auto rounded-3xl p-4 border-2 border-dashed border-gray-200">
     <table class="w-full text-sm text-center text-gray-500 ">
-      <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
-        <tr>
-          <th scope="col" class="px-6 py-3">
-            <span class="sr-only">Image</span>
-          </th>
-          <th scope="col" class="px-6 py-3">
-            المنتج
-          </th>
-          <th scope="col" class="px-6 py-3">
-            الكمية
-          </th>
-          <th scope="col" class="px-6 py-3">
-            السعر
-          </th>
-          <th scope="col" class="px-6 py-3">
-            الاجراء
-          </th>
-        </tr>
-      </thead>
+  
       <tbody>
         <ng-container *ngIf="cartItems.length > 0; else nocartItems">
           <tr class=" border-b hover:bg-gray-50" *ngFor="let item of cartItems">
@@ -29,7 +11,7 @@
             <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
               {{item.product?.name? item.product?.name : 'N/A'}}
             </td>
-            <td class="px-6 py-4">
+            <td class="px-6 py-4 ">
               <div class="flex items-center space-x-3">
                 <button (click)="decreaseCartItemQty(item.id,item)"
                   class="inline-flex items-center p-1 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 :bg-gray-800 :text-gray-400 :border-gray-600 :hover:bg-gray-700 :hover:border-gray-600 :focus:ring-gray-700"
@@ -41,7 +23,7 @@
                     </path>
                   </svg>
                 </button>
-                <div>
+                <div class="flex items-center space-x-3">
                   <label
                     class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1   ">{{item?.quantity}}</label>
                 </div>
@@ -58,7 +40,10 @@
                 </button>
               </div>
             </td>
-            <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+            <td class="px-6 py-4 font-semibold text-gray-900">
+              <p class="inline mx-1" *ngFor="let color of item.colors">{{color.name}}</p>
+            </td>
+            <td class="px-6 py-4 font-semibold text-gray-900 ">
               ${{item.price ? item.price :"N/A"}}
             </td>
             <td class="px-6 py-4">
@@ -81,6 +66,7 @@
           </tr>
         </ng-template>
       </tbody>
+
     </table>
   </div>
 
