--- a/src/app/pages/index/components/home/home.component.html
+++ b/src/app/pages/index/components/home/home.component.html
@@ -10,16 +10,20 @@
     <div
       class="grid broder-2 border-dashed border-gray-200  px-4 py-8 mx-auto lg:gap-8 xl:gap-0 lg:py-16 lg:grid-cols-12">
       <div class="mr-auto place-self-center lg:col-span-6 relative">
-        <!-- animated blured divs -->
-        <div
-          class="absolute top-[0%] left-8 w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
-        </div>
-        <div
-          class="absolute top-[25%] -right-8 w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
-        </div>
-        <div
-          class="absolute bottom-0 right-8 w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
-        </div>
+      <!-- animated blured divs -->
+      <div
+        class="absolute top-[1%]  right-[15%] w-24 h-40 rounded-full bg-[#252A34] mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+      </div>
+      <div
+        class="absolute top-[15%] right-[11%]  w-40 h-40 rounded-full bg-[#08D9D6] mix-blend-multiply filter blur-3xl animation-delay-4000">
+      </div>
+      <div
+        class="absolute top-[25%] right-[17%] w-64 h-64 rounded-full bg-[#FF2E63] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+      </div>
+      <div
+        class="absolute top-[35%] right-[14%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+      </div>
+      <!-- animated blured divs -->
         <h1
           class="max-w-2xl mb-4 text-4xl text-gray-400 font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl ">
           Isn't wierd that </h1>
