--- a/src/app/pages/noperm/noperm.component.html
+++ b/src/app/pages/noperm/noperm.component.html
@@ -1,16 +1,20 @@
 <div class=" p-5 relative overflow-hidden h-screen">
       <div
     class="container rounded-3xl border-2 border-dashed mx-auto p-10 px-6 md:px-12 relative z-10 flex items-center py-32 xl:py-40">
-    <!-- animated blured divs -->
-    <div
-      class="absolute top-[10%] left-[5%] w-72 h-72 rounded-full bg-red-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
-    </div>
-    <div
-      class="absolute top-[25%] right-[5%] w-72 h-72 rounded-full bg-gray-500 mix-blend-multiply filter blur-3xl animation-delay-4000">
-    </div>
-    <div
-      class="absolute top-[50%] right-[5%] w-72 h-72 rounded-full bg-pink-500 mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
-    </div>
+      <!-- animated blured divs -->
+      <div
+        class="absolute top-[1%]  right-[15%] w-24 h-40 rounded-full bg-[#252A34] mix-blend-multiply filter blur-3xl animate-blob animation-delay-2000">
+      </div>
+      <div
+        class="absolute top-[15%] right-[11%]  w-40 h-40 rounded-full bg-[#08D9D6] mix-blend-multiply filter blur-3xl animation-delay-4000">
+      </div>
+      <div
+        class="absolute top-[25%] right-[17%] w-64 h-64 rounded-full bg-[#FF2E63] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+      </div>
+      <div
+        class="absolute top-[35%] right-[14%]  w-40 h-40 rounded-full bg-[#EAEAEA] mix-blend-multiply filter blur-3xl animate-blob animation-delay-4000">
+      </div>
+      <!-- animated blured divs -->
     <div class="w-full flex flex-col items-center relative z-10">
                   <h1 class="font-extrabold text-5xl text-center text-gray-600 leading-tight mt-4">
         الصفحة التي تحاول الوصول اليها تطلب صلاحية ادمن
