--- a/src/app/pages/checkout/views/stepper/stepper.component.html
+++ b/src/app/pages/checkout/views/stepper/stepper.component.html
@@ -38,9 +38,11 @@
 
       <div class="p-5" *ngSwitchCase="2">
         <app-address-cart></app-address-cart>
+        
         <div class=" flex justify-start">
           <button
             class="mx-0.5 bg-gradient-to-bl  from-blue-400 to-blue-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid     border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br disabled:cursor-not-allowed  disabled:from-gray-400 disabled:to-gray-400 "
+            [disabled]="!isAddressSubmitted"
             (click)="nextStep()">التالي</button>
           <button
             class="mx-0.5 bg-gradient-to-bl  from-gray-400 to-gray-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid   border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br disabled:cursor-not-allowed  disabled:from-gray-400 disabled:to-gray-400 "
