--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -21,6 +21,15 @@
         </div>
         <ul class="py-2 text-sm text-gray-700 " aria-labelledby="dropdownInformdropdownAvatarNameButtonationButton">
           <li class="flex items-center justify-between px-2 hover:bg-gray-100">
+            <a class="block px-4 py-2 hover:bg-gray-100 " routerLink="/index">الرئيسية </a>
+            <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M2.25 12l8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25">
+              </path>
+            </svg>
+            </li>
+            <li class="flex items-center justify-between px-2 hover:bg-gray-100">
             <a class="block px-4 py-2 hover:bg-gray-100 " routerLink="/dashboard">لوحة التحكم</a>
             <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
               aria-hidden="true">
@@ -49,7 +58,7 @@
             </svg>
           </li>
         </ul>
-        <div class="py-2 flex items-center justify-around hover:bg-gray-100">
+        <div class="py-2 flex items-center justify-around hover:bg-gray-100 hover:rounded-b-3xl">
           <a class="block px-4 py-2 text-sm text-gray-700  " routerLink="/signout">تسجيل خروج</a>
           <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
             aria-hidden="true">
