--- a/src/app/pages/checkout/views/stepper/stepper.component.html
+++ b/src/app/pages/checkout/views/stepper/stepper.component.html
@@ -75,3 +75,30 @@
     </div>
   </div>
 </div>
+    <!-- Modals -->
+    <app-confirm-modal *ngIf="showConfirmationModal" (dismiss)="toggleConfirmationModal()">
+      <div modal-header>
+      </div>
+      <div class="p-6 text-center" modal-body>
+        <svg class="mx-auto mb-4 text-green-400 w-14 h-14 " fill="none" stroke="currentColor" stroke-width="1.5"
+          viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z">
+          </path>
+        </svg>
+        <h3 class="mb-5 text-lg font-normal text-gray-500 ">تم تأكيد طلبك بنجاح 🎉</h3>
+      </div>
+      <div modal-footer>
+        <div class="flex p-5">
+          <a routerLink="/index" role="button" (click)="toggleConfirmationModal()"
+            class="mx-0.5 bg-gradient-to-bl from-blue-400 to-blue-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br">
+            عودة للرئيسية
+          </a>
+          <a routerLink="/profile" role="button" (click)="toggleConfirmationModal()"
+            class="mx-0.5 bg-gradient-to-bl from-red-400 to-red-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br">متابعة
+            طلباتي</a>
+        </div>
+      </div>
+    </app-confirm-modal>
+    <app-toast *ngIf="showErrToast" (dismiss)="toggleErrToast()" toastType="error"
+      [toastMessage]="toastErrMessage"></app-toast>
