--- a/src/app/shared/confirm-modal/confirm-modal.component.html
+++ b/src/app/shared/confirm-modal/confirm-modal.component.html
@@ -3,7 +3,7 @@
 <!-- blured bg  -->
 <div class="fixed z-30 inset-0 hidden backdrop-blur-sm md:block" (click)="onDismissClick()"></div>
 <div
-  class="w-1/3 h-1/3 z-40 absolute top-1/4 left-1/4 rounded-3xl  flex items-center justify-center ">
+  class="w-1/3 h-1/3 z-40 fixed top-1/4 left-1/3 rounded-3xl  flex items-center justify-center ">
   <div class="w-full max-w-md max-h-full bg-white rounded-3xl" >
     <div class="relative rounded-3xl shadow border-2 border-gray-200">
       <div class="modal-header">
