--- a/src/app/pages/dashboard/components/orders/orders.component.html
+++ b/src/app/pages/dashboard/components/orders/orders.component.html
@@ -10,13 +10,29 @@
         </svg>بحث
       </button>
     </div>
-    <div>
+    <div class="relative">
       <input class="p-2 rounded-3xl" type="date" name="endDate" id="endDate" formControlName="endDate" />
       <label class="mx-1" for="endDate">التاريخ الى</label>
+      <div
+        class="absolute left-0 -top-8 z-10 px-3 py-1 text-sm font-medium border-2 border-red-500 text-red-500 rounded-3xl shadow-sm backdrop-blur-3xl tooltip"
+        *ngIf="showErrors()">
+        <p class=" text-xs text-center" *ngIf="orderForm.errors['endDateRange']">
+          <span class="text-blue-400"> التاريخ الى </span>
+          لا يمكن ان يسبق التاريخ من
+        </p>
       </div>
-      <div>
+      </div>
+      <div class="relative">
       <input class="p-2 rounded-3xl" type="date" name="startDate" id="startDate" formControlName="startDate" />
       <label class="mx-1" for="startDate">التاريخ من</label>
+          <div
+            class="absolute left-0 -top-8  z-10 px-3 py-1 text-xs font-medium border-2 border-red-500 text-red-500 rounded-3xl shadow-sm backdrop-blur-3xl tooltip"
+            *ngIf="showErrors()">
+            <p class=" text-xs  text-center" *ngIf="orderForm.errors['startDateRange']">
+              <span class="text-blue-400">التاريخ من</span>
+              لا يمكن ان يالي التاريخ الى
+            </p>
+          </div>
     </div>
     
   </form>
