--- a/src/app/pages/dashboard/components/orders/orders.component.html
+++ b/src/app/pages/dashboard/components/orders/orders.component.html
@@ -129,5 +129,5 @@
       </tbody>
     </table>
     </div> -->
-    <app-orders-grid></app-orders-grid>
+    <app-orders-grid [orders]="orders"></app-orders-grid>
     </section>
