--- a/src/app/pages/dashboard/views/orders-grid/orders-grid.component.html
+++ b/src/app/pages/dashboard/views/orders-grid/orders-grid.component.html
@@ -68,7 +68,7 @@
 
           </td>
           <td class="px-6 py-4 font-semibold text-gray-900 text-right">
-            No Orders Found
+            لا توجد نتائج متاحة
           </td>
           <td class="px-6 py-4">
             <div class="flex items-center space-x-3">
